--- a/index.html
+++ b/index.html
@@ -509,7 +509,7 @@
             
         })
         }else{
-            alert("samthing")
+            alert("enter valid details")
         }
 
     }
